# argon

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ToolchainGNU.cmake  ToolchainLLVM.cmake  argon.hpp  arm  arm_neon.hpp  combo.hpp  main.cpp  neon.hpp  scraper.ipynb
.github/workflows/: doxygen.yml  test-results.yml  tests.yml
docs/: a32_8hpp_source.html  a32__float_8hpp_source.html  a64_8hpp_source.html  annotated.html  annotated_dup.js  argon_2helpers_8hpp.html  argon_2helpers_8hpp.js  argon_2helpers_8hpp__dep__incl.map  argon_2helpers_8hpp__dep__incl.md5  argon_2helpers_8hpp__incl.map  argon_2helpers_8hpp__incl.md5  argon_2helpers_8hpp_source.html  argon_2store_8hpp_source.html  argon_2vector_8hpp_source.html  argon_2vectorize_2load_8hpp_source.html  argon_2vectorize_2store_8hpp_source.html  argon_8hpp_source.html  argon__for_8hpp_source.html  argon__full_8hpp_source.html  argon__half_8hpp_source.html  arm__simd_2helpers_2load_8hpp_source.html  arm__simd_2helpers_2store_8hpp_source.html  arm__simd_2helpers_2vector_8hpp_source.html  arm__simd_2helpers_8hpp_source.html  arm__simd_8hpp_source.html  bool_8hpp_source.html  classArgon-members.html  classArgon.html  classArgon.js  classArgonHalf-members.html  classArgonHalf.html  classArgonHalf_3_01ScalarType_01_4-members.html  classArgonHalf_3_01ScalarType_01_4.html  classArgonHalf_3_01ScalarType_01_4.js  classArgonHalf_3_01ScalarType_01_4__coll__graph.map  classArgonHalf_3_01ScalarType_01_4__coll__graph.md5  classArgonHalf_3_01ScalarType_01_4__inherit__graph.map  classArgonHalf_3_01ScalarType_01_4__inherit__graph.md5  classArgonHalf__coll__graph.map  classArgonHalf__coll__graph.md5  (+809 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  concepts_0.js  concepts_1.js  concepts_2.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  (+52 more)
examples/vectorize/: load.cpp
include/: argon.hpp  arm_simd.hpp  neon.hpp
include/argon/: argon128.hpp  argon64.hpp  argon_full.hpp  argon_half.hpp  common.hpp  features.h  helpers.hpp  iterator.hpp  lane.hpp  split.hpp  store.hpp  utility.hpp  vector.hpp  vectorize.hpp
include/argon/helpers/: argon_for.hpp  bool.hpp  multivec.hpp  multivector.hpp  result.hpp  size.hpp  to_array.hpp
include/argon/vectorize/: interleaved.hpp  load.hpp  load_interleaved.hpp  load_store.hpp  ptr.hpp  store.hpp  store_interleaved.hpp
include/arm_simd/: helpers.hpp
include/arm_simd/helium/: float.hpp  int.hpp  neon_float.hpp  neon_int.hpp
include/arm_simd/helpers/: concepts.hpp  duplicate_lane.hpp  get_lane.hpp  lane_helpers.hpp  load.hpp  load_lane.hpp  make_signed.hpp  make_unsigned.hpp  multiply_add_lane.hpp  multivector.hpp  nonvec.hpp  scalar.hpp  set_lane.hpp  shift_left.hpp  shift_right.hpp  store.hpp  template.hpp  vec128.hpp  vec64.hpp  vector.hpp
include/arm_simd/mve/: float.hpp  int.hpp  neon_float.hpp  neon_int.hpp
include/arm_simd/neon/: a32.hpp  a64.hpp  vfpv3.hpp  vfpv4.hpp
include/arm_simd/neon/extensions/: crc32.hpp  dup_extract.hpp  faminmax.hpp  fp16_scalar.hpp  fp8.hpp  sha3.hpp  sha512.hpp  sm3.hpp  sm4.hpp
include/arm_simd/shared/: a32_float.hpp  vfpv3_float.hpp  vfpv3_int.hpp  vfpv4_float.hpp
include/neon/: helpers.hpp  mve_neon.hpp  shared.hpp  vfpv3.hpp  vfpv4.hpp
test/: CMakeLists.txt  main.cpp
test/benchmark/: CMakeLists.txt
test/spec/: gather_spec.cpp  vectorize_spec.cpp
test/specs/: CMakeLists.txt  aes_spec.cpp  arithmetic_spec.cpp  bitwise_spec.cpp  compare_spec.cpp  convert_spec.cpp  fp_spec.cpp  gather_spec.cpp  generate_spec.cpp  lane_spec.cpp  load_store_spec.cpp  load_variants_spec.cpp  long_narrow_spec.cpp  multiply_fixed_spec.cpp  pairwise_spec.cpp  reduce_spec.cpp  shift_spec.cpp  table_spec.cpp  vectorize_spec.cpp
test/specs/helpers/: type_matrix.hpp
test/specs/vectorize/: interleaved_spec.cpp  load_interleaved_spec.cpp  load_spec.cpp  store_interleaved_spec.cpp  store_spec.cpp
